--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "regan-portfolio",
+  "homepage": "https://reganlittle.com/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
